--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ build/*
 !build/PIXLPAL-M1.bin
 !build/ota_data_initial.bin
 !build/spiffs_1.bin
+components/mtb_Ghota/include/*
 !components/mtb_Ghota/include/mtb_ghota.h
