--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
+components/mtb_Ghota/include/*
 build/*
 !build/PIXLPAL-M1.bin
 !build/ota_data_initial.bin
-!build/spiffs_1.bin
-components/mtb_Ghota/include/*
+!build/spiffs.bin
