Add World Flags App

--- a/components/mtbApps/CMakeLists.txt
+++ b/components/mtbApps/CMakeLists.txt
@@ -26,4 +26,5 @@ idf_component_register(SRCS "usb_msc.cpp" "firmwareOTA_Update.cpp" "classClk.cpp
                     App_OpenMeteo
                     App_World_Clock
                     App_PolygonFX
+                    App_WorldFlags
                     )
