worldFlags at 60percent complete

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,4 +4,4 @@ idf_component_register( SRCS "main.cpp" INCLUDE_DIRS "."
                         )
 
 #                        littlefs_create_partition_image(spiffs sysLitFs FLASH_IN_PROJECT)
-                        littlefs_create_partition_image(userDat userLitFs FLASH_IN_PROJECT)
+#                        littlefs_create_partition_image(userDat userLitFs FLASH_IN_PROJECT)
