--- a/components/mtbApps/CMakeLists.txt
+++ b/components/mtbApps/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "usb_msc.cpp" "firmwareOTA_Update.cpp" "classClk.cpp" "mtbApps.cpp" "statusBarClock.cpp" "USBFS.cpp"
+idf_component_register(SRCS "usb_msc.cpp" "firmwareOTA_Update.cpp" "classClk.cpp" "mtbApps.cpp" "statusBarClock.cpp" "mtbUSBFS.cpp"
                     INCLUDE_DIRS "include"
                     PRIV_REQUIRES usb fatfs driver esp_timer
                     REQUIRES mtbCore mtbMQTT ArduinoJson-7xx mtbGithubStorage PicoMQTT arduino-esp32 ebtn Wifi_Man mtb_Ghota ESP32-audioI2S mtbAudio espressif__esp_msc_ota mtbBLE_Control ESP-Mail-Client
