--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,5 +97,5 @@
     },
     "idf.flashType": "UART",
     "C_Cpp.errorSquiggles": "enabled",
-    "idf.port": "/dev/tty.usbserial-0001"
+    "idf.port": "/dev/tty.usbmodem1201"
 }
