--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.16)
 
+set(EXTRA_COMPONENT_DIRS ${CMAKE_SOURCE_DIR}/components/All_Pxp_Apps/Meterbit_Apps)
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 add_compile_definitions(CONFIG_SPIRAM_SUPPORT=1)
 add_compile_definitions(NANOSVG_IMPLEMENTATION=1)
