--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 components/meterbit_ota/include/*
-
 components/meterbit_graphics/mtb_gif_parser.cpp
 components/meterbit_graphics/mtb_text_scroll.cpp
 components/meterbit_graphics/mtb_graphics.cpp
-
-components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Google_Calendar/include/googleCalendar.h
+components/All_Open_Pxp_Apps/Meterbit_Apps/App_Meterbit_Google_Calendar/include/*
 
 build/*
 !build/PIXLPAL-M1.bin
