Add Text Example App

--- a/components/meterbit_engine/CMakeLists.txt
+++ b/components/meterbit_engine/CMakeLists.txt
@@ -29,6 +29,8 @@ idf_component_register(SRCS "mtb_usb_ota.cpp" "mtb_engine.cpp" "mtb_status_bar_c
                     App_Meterbit_StudioLight
                     App_Meterbit_World_Clock   
                     App_Meterbit_World_Flags
+
+                    App_Example_Write_Text
                     )
 
                 
